--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  font-family: "VT323", monospace;
   background-color: #6a6a6a !important;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
