animation and scss tweaks

--- a/src/components/PokeCard/pokeCard.scss
+++ b/src/components/PokeCard/pokeCard.scss
@@ -21,6 +21,10 @@
     .card-text {
       font-style: italic;
     }
+    .pokeImg {
+      min-width: 228px;
+      min-height: 228px;
+    }
   }
 
   .pokeImg {
