--- a/src/components/AutoBattle/autoBattle.scss
+++ b/src/components/AutoBattle/autoBattle.scss
@@ -1,11 +1,12 @@
 .battle-log {
   position: relative;
   margin-top: 80px;
-  width: 100vh;
-  height: 50vh;
+  width: 80rem;
+  height: 40vh;
   text-align: center;
   background-color: #3b3b3b;
   border-radius: 12px;
+  padding: 2rem;
 
   .text {
     color: #fff;
