--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,18 @@
+body,
+html {
+  height: 100%;
+}
+
+#root {
+  background: url("../src/utils/plushy_starters.jpg") no-repeat center center
+    fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100%;
+}
+
 .pokemon-container {
   display: flex;
   flex-direction: row;
