--- a/src/components/DashBoard/Dashboard.scss
+++ b/src/components/DashBoard/Dashboard.scss
@@ -1,86 +1,56 @@
 .Dashboard {
   width: 100%;
-  // border: 1px solid red;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: 'VT323', monospace;
+  font-family: "VT323", monospace;
 
   .Dashboard-container {
     position: relative;
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
 
-    .title {
-      color: #fff;
-      font-size: 72px;
-    }
-
-    .controls {
-      width: 100%;
+    .top {
       display: flex;
-      flex-direction: column;
-      align-items: center;
+      flex-direction: row;
 
-      .top {
-        width: 100%;
-        // border: 1px solid red;
+      .controls {
         display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-      }
+        flex-direction: column;
+        align-items: flex-start;
+        margin-right: 2rem;
 
-      .bottom {
-        width: 100%;
-        // border: 1px solid red;
-        display: flex;
-        flex-direction: row;
+        .pokemon-logo {
+          width: 600px;
+          height: 250px;
+          margin-bottom: 10rem;
+        }
 
-        .left {
-          //border: 1px solid red;
-          width: 100%;
+        .btns {
           display: flex;
           flex-direction: column;
-          justify-content: flex-end;
-
-          .one {
-            align-self: flex-end;
-            margin: 0 50px 20px 0;
-            &:hover {
-              background-color: blue;
-            }
-          }
+          align-items: flex-start;
+          padding-left: 3rem;
 
           .pack {
-            align-self: flex-end;
-          }
-        }
-
-        img {
-          width: 400px;
-          height: 200px;
-          border-radius: 50%;
-          box-shadow: 0 20px 80px 0 rgba(0, 0, 0, 0.55);
-        }
-
-        .right {
-          // border: 1px solid red;
-          width: 100%;
-          display: flex;
-          flex-direction: column;
-          justify-content: flex-end;
-
-          .cheat {
-            align-self: flex-start;
-            margin: 0 0 20px 50px;
+            margin-bottom: 2rem;
           }
 
-          .dex {
-            align-self: flex-start;
+          .dex-btn {
+            margin-bottom: 2rem;
           }
         }
+      }
+      .pokemon-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 28px;
+        margin-top: 80px;
       }
     }
   }
