--- a/src/components/PokeDex/pokeDex.scss
+++ b/src/components/PokeDex/pokeDex.scss
@@ -94,3 +94,15 @@
     }
   }
 }
+
+.pokedex {
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  span {
+    font-size: 20px;
+  }
+}
