--- a/src/components/DashBoard/Dashboard.scss
+++ b/src/components/DashBoard/Dashboard.scss
@@ -17,46 +17,78 @@
       display: flex;
       flex-direction: row;
 
+      .logotype {
+        margin-bottom: 10rem;
+        img {
+          width: 300px;
+          height: 250px;
+        }
+      }
+
       .controls {
+        width: 50%;
+        margin: 0 auto;
         display: flex;
         flex-direction: row;
-        align-items: flex-start;
-        justify-content: space-between;
-        margin-right: 2rem;
+        align-items: center;
+        justify-content: space-around;
 
-        .logotype {
-          margin-bottom: 10rem;
+        .pack {
+          background: none;
+          border: none;
+          position: relative;
+
+          span {
+            color: #000;
+            font-size: 20px;
+          }
+
+          &.disabled {
+            .shroud {
+              height: 100%;
+              position: absolute;
+              text-decoration: none;
+              top: 0;
+              left: 0;
+              width: 100%;
+              background-color: rgba($color: #000000, $alpha: 0.2);
+            }
+          }
+
           img {
-            width: 300px;
-            height: 250px;
+            width: 180px;
+            height: 180px;
+            cursor: pointer;
           }
         }
 
-        .btns {
+        .bag {
+          cursor: pointer;
           display: flex;
-          flex-direction: row;
+          flex-direction: column;
+          justify-content: center;
           align-items: center;
-          justify-content: space-between;
-          padding-left: 3rem;
 
-          /*  .pack {
-            margin-bottom: 2rem;
+          img {
+            width: 180px;
+            height: 180px;
+            cursor: pointer;
           }
 
-          .dex-btn {
-            margin-bottom: 2rem;
-          } */
+          span {
+            font-size: 20px;
+          }
         }
       }
     }
     .bot {
+      margin-top: 200px;
       .pokemon-container {
         display: flex;
         flex-direction: row;
         justify-content: center;
         flex-wrap: wrap;
         gap: 28px;
-        margin-top: 80px;
       }
       .row {
         margin-bottom: 1.5rem;
